# kanon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml  verify.yml
.kanon/: config.yaml  foundations-vision.sha  kit.md
.kanon/fidelity/: worktree-lifecycle.dogfood.md  worktree-lifecycle.md
.kanon/protocols/: spec-review.md  tier-up-advisor.md  verify-triage.md
.kanon/recipes/: reference-default.yaml
.kiro/steering/: oh-my-kiro-cli.md
ci/: check_adr_immutability.py  check_commit_messages.py  check_foundations.py  check_kit_consistency.py  check_package_contents.py  check_packaging_split.py  check_process_gates.py  check_security_patterns.py  check_status_consistency.py  check_substrate_independence.py  check_template_consistency.py  check_test_quality.py  check_verified_by.py  release-preflight.py
docs/: agent-sdd-implementation.md  contributing.md  development-process.md  kanon-implementation.md  reference-aspects.md
docs/decisions/: 0001-distribution-as-pip-package.md  0002-self-hosted-bootstrap.md  0003-agents-md-canonical-root.md  0004-verification-co-authoritative-source.md  0005-model-version-compatibility-contract.md  0006-tier-model-semantics.md  0007-status-taxonomy.md  0008-tier-migration.md  0009-project-rename-from-agent-sdd-to-kanon.md  0010-protocol-layer.md  0011-kit-bundle-refactor.md  0012-aspect-model.md  0013-vision-amendment-reference-automation.md  0014-worktrees-aspect.md  0015-vision-amendment-aspect-identity.md  0016-aspect-decoupling.md  0017-release-aspect.md  0018-invariant-ids.md  0019-fidelity-lock.md  0020-verified-by.md  0021-testing-aspect.md  0022-security-aspect.md  0023-deps-aspect.md  0024-crash-consistent-atomicity.md  0025-aspect-config-parsing.md  0026-aspect-provides-and-generalised-requires.md  0027-graph-rename-ops-manifest.md  0028-project-aspects.md  0029-recovery-model.md  0029-verification-fidelity-replay-carveout.md  0030-fidelity-aspect.md  0030-recovery-model.md  0031-fidelity-aspect.md  0032-adr-immutability-gate.md  0033-fidelity-quantitative-families.md  0034-routing-index-agents-md.md  0035-tier-as-uniform-aspect-raise.md  0036-secure-defaults-config-trust-carveout.md  0037-profile-rename-and-max.md  0038-init-merge-into-existing-agents-md.md  (+24 more)
docs/design/: README.md  aspect-model.md  dag-driven-verification.md  dialect-grammar.md  distribution-boundary.md  kanon-banner.md  kernel-reference-interface.md  kit-bundle.md  manifest-unification.md  preflight.md  resolutions-engine.md  scaffold-v2.md  sdd-protocol-gaps.md  template-bundle.md
docs/foundations/: README.md  de-opinionation.md  vision.md
docs/plans/: README.md  add-omc-routing-fallbacks.md  adr-0039-resolution.md  adr-0040-kernel-reference.md  adr-0041-realization-shape.md  adr-0042-verification-scope.md  adr-0043-distribution-cadence.md  adr-0044-substrate-self-conformance.md  adr-0045-de-opinionation.md  adr-0049-monorepo-layout.md  agents-md-marker-hardening.md  aspect-config.md  aspect-decoupling.md  aspect-depth-refactor.md  aspect-provides.md  audit-doc-paths.md  broaden-spec-gate.md  ci-dry-narrow-exceptions.md  ci-fixes.md  ci-scanner-fixes.md  cli-spec-realignment.md  close-fidelity-coverage-gaps.md  close-test-gaps.md  contributing-rewrite.md  contributor-arch-doc.md  delivery-guidance-base-layer.md  deps-aspect.md  diagram-fixes.md  error-handling-hardening.md  fidelity-and-immutability.md  fidelity-lock.md  fix-upgrade-config-preservation.md  fix-verify-exception-handling.md  foundations-rewrite.md  harness-filtering.md  high-coverage-gaps.md  high-verify-hardening.md  index-consistency-validator.md  init-agents-md-merge.md  invariant-ids.md  (+65 more)
docs/specs/: README.md  _template.md  ambiguity-budget.md  aspect-config.md  aspect-decoupling.md  aspect-provides.md  aspects.md  cli.md  cross-harness-shims.md  declarative-hard-gates.md  deps.md  dialect-grammar.md  expand-and-contract-lifecycle.md  fidelity-lock.md  fidelity.md  gates-check.md  invariant-ids.md  kanon-banner.md  multi-agent-coordination.md  preflight.md  process-gates.md  project-aspects.md  protocols.md  release-cadence.md  release.md  resolutions.md  scaffold-v2.md  security.md  spec-graph-diff.md  spec-graph-orphans.md  testing.md  (+9 more)
kernel/: __init__.py  _banner.py  _cli_aspect.py  _cli_helpers.py  _fidelity.py  _graph.py  _manifest.py  _preflight.py  _realization_shape.py  _rename.py  _resolutions.py  _scaffold.py  _verify.py  cli.py
packaging/kit/: pyproject.toml
packaging/kit/src/_kanon_kit_meta/: __init__.py
packaging/reference/: pyproject.toml
packaging/reference/src/_kanon_reference_placeholder/: __init__.py
packaging/substrate/: pyproject.toml
scripts/: check_adr_0042_wording.py  check_invariant_ids.py  check_kit_consistency.py  check_package_contents.py  check_status_consistency.py  check_substrate_independence.py  check_wheel_build.py  gen_reference_aspects.py  release-preflight.py  worktree-setup.sh  worktree-status.sh
tests/: conftest.py  test_aspect_config.py  test_aspect_provides.py  test_aspect_registry.py  test_atomic.py  test_banner.py  test_bare_name_deprecation.py  test_bootstrap_version_check.py  test_change_detection.py  test_cli.py  test_cli_aspect.py  test_cli_coverage.py  test_cli_fidelity.py  test_cli_gates_impact.py  test_cli_helpers.py  test_cli_migrate.py  test_cli_resolutions_contracts.py  test_cli_verify.py  test_composition.py  test_dag_verify.py  test_declarative_gates.py  test_detect.py  test_dialects.py  test_e2e_installed.py  test_e2e_lifecycle.py  test_edge_cases.py  test_fidelity.py  test_findings.py  test_gates_unit.py  test_graph.py  test_graph_orphans.py  test_graph_rename.py  test_import_check.py  test_index_consistency.py  test_kanon_reference_manifests.py  test_kit_integrity.py  test_preflight.py  test_protocols.py  test_readme.py  test_realization_shape.py  (+11 more)
tests/fixtures/acme-test-aspects/: README.md  pyproject.toml
tests/fixtures/acme-test-aspects/aspects/acme_test_foo/: manifest.yaml
tests/fixtures/acme-test-aspects/kit/: harnesses.yaml
(+366 files in other folders)
