[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanon-kit"
dynamic = ["version"]
description = "Portable, self-hosting Spec-Driven Development kit for LLM-agent-driven repos. Works across Claude Code, Codex, Cursor, Copilot, Windsurf, and more."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[project.scripts]
kanon = "kernel.cli:main"

# Phase A.2.2: substrate discovers aspects via Python entry-points group
# `kanon.aspects` per ADR-0040. The seven kanon-* aspects are shipped by
# src/kanon_reference/ (Phase A.2.1). Mirror of packaging/reference/pyproject.toml.
[project.entry-points."kanon.aspects"]
kanon-deps = "kanon_reference.aspects.kanon_deps.loader:MANIFEST"
kanon-fidelity = "kanon_reference.aspects.kanon_fidelity.loader:MANIFEST"
kanon-release = "kanon_reference.aspects.kanon_release.loader:MANIFEST"
kanon-sdd = "kanon_reference.aspects.kanon_sdd.loader:MANIFEST"
kanon-security = "kanon_reference.aspects.kanon_security.loader:MANIFEST"
kanon-testing = "kanon_reference.aspects.kanon_testing.loader:MANIFEST"
kanon-worktrees = "kanon_reference.aspects.kanon_worktrees.loader:MANIFEST"

[tool.hatch.version]
path = "kernel/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["kernel", "src/kanon_reference"]

[tool.hatch.build.targets.sdist]
include = [
    "kernel",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["kernel"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
src = ["kernel", "src", "tests", "scripts"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kernel --cov-report=term-missing --cov-fail-under=90 -m 'not e2e'"
markers = ["e2e: end-to-end tests against installed package (slow)"]

[tool.coverage.run]
source = ["kernel"]
branch = true
