[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanon-kit"
dynamic = ["version"]
description = "Portable, self-hosting Spec-Driven Development kit for LLM-agent-driven repos. Works across Claude Code, Codex, Cursor, Copilot, Windsurf, and more."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "build>=1.0",   # used by scripts/check_wheel_build.py + release.yml
]

[project.scripts]
kanon = "kanon_core.cli:main"

# Per ADR-0040: substrate discovers aspects via Python entry-points group
# `kanon.aspects`. The seven kanon-* aspects are shipped by src/kanon_reference/
# (will be renamed to packages/kanon-aspects/src/kanon_aspects/ in a sibling PR
# per ADR-0054).
[project.entry-points."kanon.aspects"]
kanon-deps = "kanon_reference.aspects.kanon_deps.loader:MANIFEST"
kanon-fidelity = "kanon_reference.aspects.kanon_fidelity.loader:MANIFEST"
kanon-release = "kanon_reference.aspects.kanon_release.loader:MANIFEST"
kanon-sdd = "kanon_reference.aspects.kanon_sdd.loader:MANIFEST"
kanon-security = "kanon_reference.aspects.kanon_security.loader:MANIFEST"
kanon-testing = "kanon_reference.aspects.kanon_testing.loader:MANIFEST"
kanon-worktrees = "kanon_reference.aspects.kanon_worktrees.loader:MANIFEST"

[tool.hatch.version]
path = "packages/kanon-core/src/kanon_core/__init__.py"

# Per ADR-0054 §7: root pyproject continues to publish kanon-kit as the monolith
# until ADR-0053's forcing function fires. The wheel ships `kanon_core/...` and
# `kanon_reference/...` collected from their respective source-tree locations.
# `packages/kanon-core/pyproject.toml` is independently buildable (build-correct
# standalone) but not published to PyPI yet.
[tool.hatch.build.targets.wheel]
packages = ["packages/kanon-core/src/kanon_core", "src/kanon_reference"]

[tool.hatch.build.targets.sdist]
include = [
    "packages/kanon-core",
    "src/kanon_reference",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["kanon_core"]
mypy_path = "packages/kanon-core/src:src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
src = ["packages/kanon-core/src", "src", "tests", "scripts"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kanon_core --cov-report=term-missing --cov-fail-under=90 -m 'not e2e'"
markers = ["e2e: end-to-end tests against installed package (slow)"]

[tool.coverage.run]
source = ["kanon_core"]
branch = true
