# Phase A.2.1 (per docs/plans/phase-a.2.1-loader-package.md, per ADR-0040 design
# docs/design/kernel-reference-interface.md): kanon_reference Python package + LOADER
# (MANIFEST) stubs are now authored at src/kanon_reference/. Entry-points are active.
# The kit-author-side substrate runtime that DISCOVERS these entry-points lands in
# Phase A.2.2 (_load_aspect_registry rewrite). The wheel built from this pyproject is
# now content-complete; Phase A.2.2 adds the substrate-side discovery.

[project]
name = "kanon-reference"
version = "1.0.0a1"
description = "Reference discipline aspects for the kanon protocol substrate."
readme = "../../README.md"
requires-python = ">=3.10"
license = { file = "../../LICENSE" }
dependencies = [
    "kanon-substrate==1.0.0a1",
]

[project.entry-points."kanon.aspects"]
kanon-deps = "kanon_reference.aspects.kanon_deps:MANIFEST"
kanon-fidelity = "kanon_reference.aspects.kanon_fidelity:MANIFEST"
kanon-release = "kanon_reference.aspects.kanon_release:MANIFEST"
kanon-sdd = "kanon_reference.aspects.kanon_sdd:MANIFEST"
kanon-security = "kanon_reference.aspects.kanon_security:MANIFEST"
kanon-testing = "kanon_reference.aspects.kanon_testing:MANIFEST"
kanon-worktrees = "kanon_reference.aspects.kanon_worktrees:MANIFEST"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["../../src/kanon_reference"]
