# Phase A.1 skeleton (per docs/plans/phase-a.1-distribution-split.md, per ADR-0045).
# Schema-of-record for the kanon-substrate wheel per docs/design/distribution-boundary.md.
# NOT runtime-functional yet: substrate's _kit_root() machinery currently looks for aspects
# co-located with the kernel; entry-point-based aspect discovery is wired by Phase A.2
# (per docs/design/kernel-reference-interface.md). Top-level pyproject.toml remains the
# active build path for kanon-kit v0.3.x.

[project]
name = "kanon-substrate"
version = "1.0.0a1"
description = "Protocol substrate for prose-as-code engineering discipline in LLM-agent-driven repos."
readme = "../../README.md"
requires-python = ">=3.10"
license = { file = "../../LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
kanon = "kanon.cli:main"

[project.urls]
Homepage = "https://github.com/altakleos/kanon"
Documentation = "https://github.com/altakleos/kanon/blob/main/docs/foundations/vision.md"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["../../src/kanon"]
exclude = [
    "../../src/kanon/kit/aspects/**",
]
